--- a/client/package.json
+++ b/client/package.json
@@ -15,16 +15,19 @@
     "firebase": "^10.13.0",
     "flowbite-react": "^0.10.1",
     "jsonwebtoken": "^9.0.2",
+    "moment": "^2.30.1",
     "react": "^18.3.1",
     "react-circular-progressbar": "^2.1.0",
     "react-dom": "^18.3.1",
     "react-quill": "^2.0.0",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.26.1",
-    "redux-persist": "^6.0.0"
+    "redux-persist": "^6.0.0",
+    "tailwind-scrollbar": "^3.1.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
+    "@tailwindcss/line-clamp": "^0.4.4",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "@vitejs/plugin-react-swc": "^3.5.0",
