--- a/client/package.json
+++ b/client/package.json
@@ -21,6 +21,7 @@
     "react-dom": "^18.3.1",
     "react-quill": "^2.0.0",
     "react-redux": "^9.1.2",
+    "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.26.1",
     "redux-persist": "^6.0.0",
     "tailwind-scrollbar": "^3.1.0"
